# tioft_rust_discord_2

./: .gitignore  Cargo.toml  README.md  log_new.txt.bak.031519  typescript
src/: ._main.rs.racertmp1181129-16212-z080xl.gsd2m  main.rs  scp.rs
